--- a/Aboutme.html
+++ b/Aboutme.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <title>About Tyra North</title>
-<body>
+<body style= "background=http://favim.com/media/uploads/images/orig/140325/dreamer-galaxy-gif-Favim.com-1545075.gif>
+              </boby>
 
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
