--- a/Aboutme.html
+++ b/Aboutme.html
@@ -2,7 +2,7 @@
 <html>
 <title>About Tyra North</title>
 <body style= "background=http://favim.com/media/uploads/images/orig/140325/dreamer-galaxy-gif-Favim.com-1545075.gif>
-              </boby>
+              </body>
 
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
