--- a/Aboutme.html
+++ b/Aboutme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>About Tyra North</title>
-<body style= "background=http://favim.com/media/uploads/images/orig/140325/dreamer-galaxy-gif-Favim.com-1545075.gif>
+<body background="http://favim.com/media/uploads/images/orig/140325/dreamer-galaxy-gif-Favim.com-1545075.gif>
               
 
 <h1>This is a heading</h1>
