--- a/Aboutme.html
+++ b/Aboutme.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <title>About Tyra North</title>
-<body background="http://favim.com/media/uploads/images/orig/140325/dreamer-galaxy-gif-Favim.com-1545075.gif>
-              
-
+  <style>
+  body {
+  background-image: url("http://favim.com/media/uploads/images/orig/140325/dreamer-galaxy-gif-Favim.com-1545075.gif");
+  }
+  </style>
+<body>
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
 
