--- a/Aboutme.html
+++ b/Aboutme.html
@@ -3,7 +3,7 @@
 <title>About Tyra North</title>
   <style>
   body {
-  background-image: url("http://favim.com/media/uploads/images/orig/140325/dreamer-galaxy-gif-Favim.com-1545075.gif");
+  background-image: url("dreamer.gif");
   }
   </style>
 <body>
