--- a/Aboutme.html
+++ b/Aboutme.html
@@ -4,15 +4,21 @@
   <style>
   body {
   background-image: url("dreamer.gif");
+	  color:green;
   }
-
+h1 {
+	color: #42f4a7;
+}
+P {
+	color:rgb(66, 244, 167)
+}
   </style>
 <body>
 <main>
 	<h2>About me </h2>
 	
-<h1>Hobes</h1>
-<p>This is a paragraph.</p>
+<h1>The things I like ...</h1>
+<p>T.</p>
 
 </body>
 </html> 
