--- a/Aboutme.html
+++ b/Aboutme.html
@@ -17,8 +17,8 @@ P {
 <main>
 	<h2>About me </h2>
 	
-<h1>The things I like ...</h1>
-<p>T.</p>
+<h1>Things about me...</h1>
+<p> I am  outdoor .</p>
 
 </body>
 </html> 
