--- a/Aboutme.html
+++ b/Aboutme.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<title>About Tyra North</title>
+<title> About me </title>
   <style>
   body {
-  background-image: url("dreamer.gif");
+  background-image: url("newspaper-dress.jpg");
 	  color:green;
   }
 h1 {
@@ -15,10 +15,10 @@ P {
   </style>
 <body>
 <main>
-	<h2>About me </h2>
+	<h2>Tyra North </h2>
 	
 <h1>Things about me...</h1>
-<p> I am  outdoor .</p>
+<p> I love the outdoors an eber by haert  .</p>
 
 </body>
 </html> 
