--- a/Aboutme.html
+++ b/Aboutme.html
@@ -3,7 +3,7 @@
 <title> About me </title>
   <style>
   body {
-  background-image: url("newspaper-dress.jpg");
+  background-image: url("newspaper-dress");
 	  color:green;
   }
 h1 {
