--- a/Aboutme.html
+++ b/Aboutme.html
@@ -23,6 +23,6 @@ P {
 	
 	
 <!-- Show/Hide More -->
-<script type="text/javascript" src="js/showMore.js"></script>
+<script type="text/javascript" src="js/Showmore.js"></script>
 </body>
 </html> 
