--- a/Aboutme.html
+++ b/Aboutme.html
@@ -18,7 +18,7 @@ P {
 	<h2>Tyra North </h2>
 	
 <h1>Things about me...</h1>
-<p class="excerpt"> I love living life some of my hobbies include reading, hiking, fashion, and engineer. Following in love with sociology and anthopology which were subject matters that at took this school year. I feel empowered when I accomplish task that I set out for myself. This summer my luck is evedent with my ability to perticapate in FIMD 3 days of fashion and Girls who Code. Being able to access my interest resinets with me because it backs up the understanding that I am able. I am in control of my choices and I can choose to live in this world as a leader and inovator.</span></p>
+<p class="excerpt"> I love living life some of my hobbies include reading, hiking, fashion, and engineer. Falling in love this school year with sociology and anthropology gave me insight that I received. I feel empowered when I accomplish task that I set out for myself. This summer my luck is evident with my ability to participate in FIMD 3 days of fashion and Girls who Code. Being able to access my interest resonates with me because it backs up the understanding that I am able. I am in control of my choices and I can choose to live in this world as a leader and innovator.</span></p>
 <p class="expander">Show <span class="expanderAction">More</span></p>
 	
 	
