--- a/Aboutme.html
+++ b/Aboutme.html
@@ -7,10 +7,10 @@
 	  color:green;
   }
 h1 {
-    color: #2fff37;
+    color: ccffdc;
 }
 P {
-	color:rgb(66, 244, 167)
+	color:rgb(204, 255, 220)
 }
   </style>
 <body>
