--- a/Aboutme.html
+++ b/Aboutme.html
@@ -2,8 +2,23 @@
 <html>
 <title> About me </title>
   <style>
-  body {
-  background-image: url("lady with the Hat.jgp");
+  body, htlml {
+    height: 100%;
+    margin: 0;
+}
+
+.bg {
+    /* The image used */
+    background-image: url("Woman.jpg");
+
+    /* Full height */
+    height: 50%; 
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+} {
 	  color:green;
   }
 h1 {
