--- a/Aboutme.html
+++ b/Aboutme.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title> About me </title>
+<title> Tyra's portfolis </title>
   <style>
   body, htlml {
     height: 100%;
