--- a/Aboutme.html
+++ b/Aboutme.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-<title> Tyra's portfolis </title>
-  <style>
-  body, htlml {
+<head>
+<style>
+body, html {
     height: 100%;
     margin: 0;
 }
 
 .bg {
     /* The image used */
+    background-image: url("Woman.jpg");
 
     /* Full height */
     height: 50%; 
@@ -18,26 +19,14 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
-p{
-	  color:green;
-  }
-h1 {
-    color:00A6A8;
-}
-P {
-	color:rgb(204, 255, 220)
-}
-  </style>
+</style>
+</head>
 <body>
-<main>
-	<h2>Tyra North </h2>
-	
-<h1>Things about me...</h1>
-<p class="excerpt"> I love living life some of my hobbies include reading, hiking, fashion, and engineer. Falling in love this school year with sociology and anthropology gave me insight that I received. I feel empowered when I accomplish task that I set out for myself. This summer my luck is evident with my ability to participate in FIMD 3 days of fashion and Girls who Code. Being able to access my interest resonates with me because it backs up the understanding that I am able. I am in control of my choices and I can choose to live in this world as a leader and innovator.</span></p>
-<p class="expander">Show <span class="expanderAction">More</span></p>
-	
-<img src="Woman.jpg" style= "height=500px weight=70000px">	
-<!-- Show/Hide More -->
-<script type="text/javascript" src="js/Showmore.js"></script>
+
+<div class="bg"></div>
+
+<p>This example creates a half page background image. Try to resize the browser window to see how it always will cover 50% of the screen, and that it scales nicely on all screen sizes.</p>
+
 </body>
-</html> 
+</html>
+
