--- a/Aboutme.html
+++ b/Aboutme.html
@@ -20,12 +20,14 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
 }
-<div class="bg"></div>
-
-
  </style>
+</head>
 <body>
 <main>
+	
+<div class="bg"></div>
+	
+
 	<h2>Tyra North </h2>
 	
 <h1>Things about me...</h1>
