--- a/Aboutme.html
+++ b/Aboutme.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Tyra's portfolis </title>  
 <style>
 body, html {
     height: 100%;
@@ -10,7 +9,7 @@ body, html {
 
 .bg {
     /* The image used */
-    background-image: url("Woman.jpg");
+    background-image: url("img_girl.jpg");
 
     /* Full height */
     height: 50%; 
@@ -20,26 +19,13 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
 }
- </style>
-</head>
-<body>
-<main>
-	
-<div class="bg"></div>
-	
-
-	<h2>Tyra North </h2>
-	
-<h1>Things about me...</h1>
-<p class="excerpt"> I love living life some of my hobbies include reading, hiking, fashion, and engineer. Falling in love this school year with sociology and anthropology gave me insight that I received. I feel empowered when I accomplish task that I set out for myself. This summer my luck is evident with my ability to participate in FIMD 3 days of fashion and Girls who Code. Being able to access my interest resonates with me because it backs up the understanding that I am able. I am in control of my choices and I can choose to live in this world as a leader and innovator.</span></p>
-<p class="expander">Show <span class="expanderAction">More</span></p>	
 </style>
 </head>
 <body>
 
+<div class="bg"></div>
 
-
+<p>This example creates a half page background image. Try to resize the browser window to see how it always will cover 50% of the screen, and that it scales nicely on all screen sizes.</p>
 
 </body>
 </html>
-
