--- a/Aboutme.html
+++ b/Aboutme.html
@@ -9,7 +9,7 @@ body, html {
 
 .bg {
     /* The image used */
-    background-image: url("img_girl.jpg");
+    background-image: url("Woman.jpg");
 
     /* Full height */
     height: 50%; 
