--- a/Aboutme.html
+++ b/Aboutme.html
@@ -19,6 +19,15 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
 }
+    } {
+	  color:green;
+  }
+h1 {
+    color:00A6A8;
+}
+P {
+	color:rgb(204, 255, 220)
+}
 </style>
 </head>
 <body>
