--- a/Aboutme.html
+++ b/Aboutme.html
@@ -33,10 +33,22 @@ P {
 }
 h1 {
     text-align: center;
-}	
+}
+
+h2 {
+    text-align: center;
+}
+
+p {
+    text-align: center;
+}
 </style>
 </head>
 <body>
+
+<h1>Heading 1 (center)</h1>
+<h2>Heading 2 (center)</h2>
+<h3>Heading 3 (center)</h3>
 
 <div class="bg"></div>
 
