--- a/Aboutme.html
+++ b/Aboutme.html
@@ -46,13 +46,9 @@ p {
 </head>
 <body>
 
-<h1>Heading 1 (center)</h1>
-<h2>Heading 2 (center)</h2>
-<h3>Heading 3 (center)</h3>
-
 <div class="bg"></div>
 
-<h2>Tyra North </h2>
+<h2>Hello, my name is Tyra North </h2>
 	
 <h1>Things about me...</h1>
 <p class="excerpt"> I love living life some of my hobbies include reading, hiking, fashion, and engineer. Falling in love this school year with sociology and anthropology gave me insight that I received. I feel empowered when I accomplish task that I set out for myself. This summer my luck is evident with my ability to participate in FIMD 3 days of fashion and Girls who Code. Being able to access my interest resonates with me because it backs up the understanding that I am able. I am in control of my choices and I can choose to live in this world as a leader and innovator.</span></p>
