--- a/Aboutme.html
+++ b/Aboutme.html
@@ -19,8 +19,8 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
 }
-    } {
-	  color:green;
+} {
+	  color: Brown;
   }
 h1 {
     color:00A6A8;
@@ -28,9 +28,7 @@ h1 {
 P {
 	color:rgb(204, 255, 220)
 }
-{
-    background-color: lightblue;
-}
+
 h1 {
     text-align: center;
 }
@@ -42,9 +40,7 @@ h2 {
 p {
     text-align: center;
 }
- {
-    background-color: Brown;
-}
+ 
 </style>
 </head>
 <body>
