--- a/Aboutme.html
+++ b/Aboutme.html
@@ -23,10 +23,10 @@ body, html {
 	  color: Brown;
   }
 h1 {
-    color:00A6A8;
+    color:391313;
 }
 P {
-	color:rgb(204, 255, 220)
+	color:rgb(57, 19, 19)
 }
 
 h1 {
