--- a/Aboutme.html
+++ b/Aboutme.html
@@ -19,9 +19,9 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
 }
-} {
-	  color: Brown;
-  }
+h1 {
+    color: green;
+}
 h1 {
     color:391313;
 }
